Fix horizontal scrollbar always showing.

--- a/mewe-fluid.user.css
+++ b/mewe-fluid.user.css
@@ -2,7 +2,7 @@
 /* ==UserStyle==
 @name         MeWe++ Fluid Auto Multi Columns
 @namespace    https://kevin-guertin.github.io
-@version      1.3.0
+@version      1.3.1
 @description  A Userstyle for Mewe to make your stream use the full width of your window and include as many columns of posts as it can.
 @author       kevin-guertin (https://kevin-guertin.github.io)
 @homepageURL  https://github.com/kevin-guertin/mewe-fluid-userstyle
@@ -24,7 +24,7 @@
 
     .c-feed-simple {
         display: grid !important;
-        grid-template-columns: repeat(auto-fill, minmax(440px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
         grid-gap: 1.5rem;
         max-width: none;
         justify-items: stretch;
@@ -53,7 +53,7 @@
     }
 
     .feed-filters {
-        padding: 0 1em 1em 0;
+        padding-bottom: 1em;
         justify-content: center !important;
         margin-top: -1rem;
     }
